<resources>
    <string name="app_name">Project 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GameName">Higher or Lower</string>
    <string name="settings">Settings</string>
    <string name="Start">Start Game</string>
    <string name="Settings">Settings</string>
    <string name="BackButton">Back</string>
    <string name="black">black</string>
    <string name="white">white</string>
    <string name="red">red</string>
    <string name="Higher">Higher</string>
    <string name="Lower">Lower</string>
    <string name="EndGame">End Game</string>
    <string name="EndGameText">You Guessed Wrong!</string>
    <string name="YourScore">"Your Score: "</string>
    <string name="userscore">Your Score:</string>
    <string name="playagain">Play Again</string>
    <string name="set">Try some items differently</string>
</resources>